			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1590 2001/03/05 18:37:05 thorpej Exp $

<200103>
2001-03-05  Jason R. Thorpe  <thorpej@zembu.com>

	* kame/racoon/handler.c: Implement deleteallph2(), which
	deletes all Phase 2 handlers for a given src/dst/proto.
	* kame/racoon/isakmp_inf.c: When processing INITIAL-CONTACT,
	try to use the SADB_DELETE `delete all' extension and
	deleteallph2() before doing it The Hard Way.  For both The
	Easy Way and The Hard Way, make sure we only delete SAD entries
	for SATYPEs that we manage.
	* kame/racoon/pfkey.c: Use a table of SATYPEs that we manage,
	and use that table to initialize our PF_KEY state.

2001-03-05  Jason R. Thorpe  <thorpej@zembu.com>

	* kame/libipsec/pfkey.c: Add pfkey_send_delete_all(), which
	sends an SADB_DELETE with satype/mode/src/dst.

Mon Mar  5 JST 2001  itojun@iijlab.net
	* sys/netinet6/raw_ip6.c: avoid 1-byte mbuf buffer overrun, and/or
	  unaligned memory access, in rip6_output().  commented by yoshfuji.
	  it will be tickled only if a evil/buggy root process runs.

2001-03-04  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_free): moved a line calling
	pfxlist_onlink_check() before the default router selection part,
	based on a request from Mattias Pettersson
	<mattias.pettersson@verkstad.net>.

2001-03-03  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* kame/pma/*: removed.
	  This function is obsolete.

2001-03-03  Shin'ichi Fujisawa  <fujisawa@kame.net>
	* sys/netinet6/natpt_usrreq.c (natpt_uattach) call natpt_attach if
	  privileged process.
	* sys/netinet6/natpt_rule.c (natpt_in4_len2mask): convert host
	  byte order of calculated mask.
	* sys/conf/options (freebsd4): add NATPT_NAT
	* kame/natptconfig/show.c: Fix struct nlist symbol name.  Change
	  string compare method, check string length in the first place.

	  TODO: It is not so good to read '/dev/kmem', I need to think about
	  another method to read these variables from kernel.
